# finetune-experiment

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: lora_example.toml  pdf_lora.toml  qlora_example.toml  shakespeare_lora.toml
scripts/: deploy.sh  remote_setup.sh
src/finetune/: __init__.py  cli.py  config.py
src/finetune/data/: __init__.py  loader.py
src/finetune/evaluation/: __init__.py  metrics.py
src/finetune/models/: __init__.py  loader.py
src/finetune/trainers/: __init__.py  sft.py
src/finetune/utils/: __init__.py  helpers.py
src/finetune_pdfs/: chat.py  train_lora.py  train_shakespeare_lora.py
src/finetune_shakespeare/: chat.py  shakespeare_chunker.py  train_lora.py  train_shakespeare_lora.py
tests/: test_config.py
