[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetune-experiment"
version = "0.1.0"
description = "LLM fine-tuning experiments: full training, LoRA, and QLoRA techniques"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Avisek Sengupta", email = "aviseksengupta@gmail.com" }]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.19.0",
    "accelerate>=0.29.0",
    "trl>=0.8.0",
    "evaluate>=0.4.0",
    "sentencepiece>=0.2.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "wandb>=0.17.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.7.0",
]
flash-attn = [
    "flash-attn>=2.5.0",
]

[project.scripts]
finetune = "finetune.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finetune"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"scripts/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=finetune --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
