[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-experiment"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "pypdf>=4.2",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
train-lora = "finetune_pdfs.train_lora:app"
train-shakespeare-lora = "finetune_pdfs.train_shakespeare_lora:app"

[tool.setuptools.packages.find]
where = ["src"]
